client/src/document/index.scss
@use "../ui/vars" as *;
@use "../ui/molecules/grids/grids.scss" as *;
@use "../ui/base/typography" as *;

.only-in-en-us {
  span {
    font-size: 0.8125rem;
  }
}

a.page-not-created {
  color: var(--icon-critical);
  cursor: not-allowed;
}

.main-page-content {
  padding: 3rem 1rem 1rem;
  overflow-wrap: break-word;

  img {
    display: inline-block;
    height: auto;
    margin: 0 auto;
    display: flex;
  }

  figure {
    margin-bottom: 1rem;
  }

  ul li {
    margin-bottom: 0.5rem;
  }

  dt:not(.bc-legend-item-dt) {
    margin-bottom: 1rem;

    &:not(.bc-supports) {
      padding-bottom: 1rem;
      color: var(--text-link);
      border-bottom: 1px solid var(--border-primary);
    }

    p {
      padding: 0;
    }
  }

  dd:not(.bc-legend-item-dd) {
    margin-bottom: 1rem;
  }

  .example-good,
  .example-bad {
    padding: 0 1rem;
    position: relative;

    &::after {
      background-size: 24px;
      content: "";
      display: block;
      height: 16px;
      width: 16px;
      position: absolute;
      right: 20px;
      top: 18px;
    }
  }

  .example-bad + .copy-icon {
    display: none;
  }

  .example-bad {
    &::after {
      background-color: var(--icon-critical);
      mask-image: url("../assets/icons/no.svg");
    }
  }

  .example-good {
    &::after {
      background-color: var(--icon-success);
      mask-image: url("../assets/icons/checkmark.svg");
    }
  }

  pre {
    margin-bottom: 2rem;
    padding: 1rem 2.5rem 1rem 1rem;
    margin: 0 0 2rem 0;
    background-color: var(--background-tertiary);
    border: 1px solid var(--border-secondary);
    border-radius: 4px;
  }

  .code-example {
    color: var(--code-default);
    font: var(--type-code-regular);
    position: relative;

    .copy-icon {
      background-image: url("../assets/clippy.svg");
      background-repeat: no-repeat;
      background-position: 61% 45%;
      background-size: 1rem;
      border-radius: 0.25rem;
      cursor: pointer;
      height: 33px;
      margin: 0;
      padding: 0.25rem;
      position: absolute;
      right: 0.5rem;
      top: 0.75rem;
      width: 33px;

      @media screen and (min-width: $screen-md) {
        opacity: 0.4;

        &:hover,
        &:focus {
          opacity: 1;
        }
      }
    }

    .copy-icon-message {
      background: $mdn-color-dark-grey-90;
      border-radius: 0.25rem;
      color: white;
      display: none;
      font-size: 0.8125rem;
      opacity: 1;
      padding: 0.125rem;
      position: absolute;
      right: 0.25rem;
      top: 15px;
      z-index: -1000;
    }

    .show {
      display: block;
    }

    .example-good,
    .example-bad {
      padding: 1rem;
    }
  }

  h1 {
    word-break: break-word;
  }

  a:not(.button) {
    text-decoration: underline;
    color: var(--text-link);

    &:hover,
    &:focus {
      text-decoration: none;
    }

    &:active {
      background-color: var(--text-link);
      color: white;

      code {
        background-color: transparent;
      }
    }

    &[id^="attr-"] {
      &:link,
      &:visited {
        color: var(--text-link);
        text-decoration: none;
      }

      &:hover,
      &:focus {
        text-decoration: underline;
      }

      &:active {
        color: white;
      }
    }
  }

  [aria-current] {
    color: var(--text-link);
    font-weight: bold;
    text-decoration: none;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    a:link,
    a:visited {
      color: var(--text-primary);
      text-decoration: none;
    }

    a:hover,
    a:focus {
      text-decoration: underline;
    }

    a:active {
      background-color: transparent;
    }

    a[href^="#"]:hover {
      &:after {
        display: inline-flex;
        margin-left: 4px;
        line-height: 1;
        font-size: 0.7em;
        text-decoration: none;
        color: var(--text-inactive);
        content: "#";
      }
    }
  }

  table:not(.bc-table) {
    font: var(--type-body-l);
    border: 1px solid var(--border-primary);
    border-collapse: collapse;
    margin: 1rem 0;
    width: 100%;

    th {
      text-align: left;
      background: var(--background-tertiary);
      font-weight: bold;
    }

    td,
    th {
      padding: 0.5rem;
      border: 1px solid var(--border-primary);
      vertical-align: middle;
    }
  }

  blockquote {
    border-left: 4px solid var(--border-secondary);
    padding: 1rem 2rem;
    margin: 1rem 0;
    font: var(--type-body-l);
  }

  /* readonly inline badges needs a slightly darker background color in general article content  */
  .inline {
    &.optional,
    &.readonly {
      background-color: var(--background-secondary);
    }
  }

  /*
   * top navigational elements on tutorial pages
   * prevnext is added for backwards compatibility
   */
  .prevnext,
  .prev-next {
    @media screen and (max-width: $screen-sm) {
      display: flex;
      justify-content: space-between;
      margin-bottom: 1rem;
    }

    a.button {
      margin-bottom: 0.5rem;
      max-width: inherit;

      @media screen and (max-width: $screen-sm) {
        margin-bottom: inherit;
      }
    }
  }

  /*
   * multi-column layout on pages with an index such as
   * https://developer.mozilla.org/en-US/docs/Web/API#Specifications
  */
  .index {
    columns: 3;
    margin-bottom: 1rem;

    @media screen and (min-width: $screen-md) {
      margin-bottom: 0.5rem;
    }

    .icon-experimental,
    .icon-nonstandard {
      color: var(--icon-information);
    }

    .icon-deprecated {
      color: var(--icon-critical);
    }
  }

  iframe {
    max-width: 100%;
    width: 100%;
    border: 1px solid var(--border-primary);
  }

  iframe:not(.sample-code-frame) {
    border: 0;
  }

  h1 {
    font: var(--type-heading-h1);
    letter-spacing: -0.5px;
    padding-bottom: 3rem;
  }

  h2 {
    font: var(--type-heading-h2);
    letter-spacing: 0.5px;
    padding: 2rem 0 1rem 0;
  }

  h3 {
    font: var(--type-heading-h3);
    letter-spacing: 0.5px;
    padding: 2rem 0 1rem 0;
  }

  h4 {
    font: var(--type-heading-h4);
    letter-spacing: 0.5px;
    padding: 2rem 0 1rem 0;
  }

  h5 {
    font: var(--type-heading-h5);
    letter-spacing: 1.5px;
    padding: 2rem 0 1rem 0;
    text-transform: uppercase;
  }

  h6 {
    font: var(--type-heading-h6);
    letter-spacing: 1.5px;
    padding: 2rem 0 1rem 0;
    text-transform: uppercase;
  }

  p {
    font: var(--type-body-l);
    padding-bottom: 2rem;
  }

  li {
    font: var(--type-body-l);
  }

  ul,
  ol {
    margin: 0;
    padding: 0 0 2rem 2rem;
  }

  ul {
    list-style: disc;

    ul {
      padding-bottom: 0;
    }
  }

  ol {
    list-style: decimal;

    ol {
      list-style: lower-roman;
      padding-bottom: 0;
    }
  }

  .mdn-docs-type-notecard-bold {
    font-family: Inter;
    font-style: normal;
    font-weight: 600;
    font-size: 0.875rem;
    line-height: 1.75;
  }
  .mdn-docs-type-notecard-regular {
    font-family: Inter;
    font-style: normal;
    font-weight: normal;
    font-size: 0.875rem;
    line-height: 1.75;
  }
  .mdn-docs-type-notecard-underlined {
    font-family: Inter;
    font-style: normal;
    font-weight: normal;
    font-size: 0.875rem;
    line-height: 1.75;
    text-decoration-line: underline;
  }
  .mdn-docs-type-code-regular {
    font-family: Consolas;
    font-style: normal;
    font-weight: normal;
    font-size: 0.875rem;
    line-height: 150%;
  }

  @media screen and (min-width: $screen-sm) {
    padding: 3rem;
  }

  @media screen and (min-width: $screen-md) {
    margin-bottom: 0.5rem;
    padding: 0;
  }
}

